--- a/SpatialTemporalGNN.ipynb
+++ b/SpatialTemporalGNN.ipynb
@@ -68,8 +68,10 @@
    },
    "outputs": [],
    "source": [
+    "info = 2\n",
+    "\n",
     "train_dataset = SkeletonsDataset('Data/train_annotations_with_skeletons.csv',\n",
-    "                                 normalization='minmax', target='cross', info=1)\n",
+    "                                 normalization='minmax', target='cross', info=info)\n",
     "\n",
     "print('train_dataset len:', len(train_dataset))\n",
     "print('Temporal dimension length:', len(train_dataset.data[0].x_temporal))\n",
@@ -130,23 +132,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Showing a skeleton"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "skeleton = train_dataset.data[0].x_temporal[0][:, 0:2].tolist()\n",
+    "textsize = 14\n",
+    "body_parts = train_dataset.body_parts\n",
+    "pose_parts = train_dataset.pose_parts\n",
+    "parts = list(body_parts.keys())\n",
     "\n",
-    "skeleton2 = []\n",
+    "node_coords = {}\n",
     "\n",
-    "for sk in skeleton:\n",
-    "    if(sk!=[0, 0]):\n",
-    "        skeleton2.append(sk)\n",
-    "        \n",
-    "skeleton2 = np.asarray(skeleton2)\n",
+    "plt.figure(figsize=(10,10))\n",
     "\n",
-    "plt.figure()\n",
-    "plt.scatter(skeleton2[:, 0], skeleton2[:, 1])\n",
+    "skeleton = train_dataset.data[100].x_temporal[0][:, 0:2].tolist()\n",
+    "\n",
+    "for e, sk in enumerate(skeleton):    \n",
+    "    node_coords[parts[e]] = sk\n",
+    "    \n",
+    "    plt.scatter(sk[0], sk[1], label=parts[e])\n",
+    "\n",
+    "for edge in pose_parts:\n",
+    "    e0 = node_coords[edge[0]]\n",
+    "    e1 = node_coords[edge[1]]\n",
+    "    \n",
+    "    plt.plot([e0[0], e1[0]], [e0[1], e1[1]], color='gray')\n",
+    "\n",
+    "plt.legend(loc='best', prop={'size': 11})\n",
+    "plt.xticks(size=textsize)\n",
+    "plt.yticks(size=textsize)\n",
+    "plt.title('Skeleton preview in 2D', size=textsize)\n",
     "plt.show()"
    ]
   },
@@ -164,9 +187,7 @@
    "outputs": [],
    "source": [
     "val_dataset = SkeletonsDataset('Data/val_annotations_with_skeletons.csv', normalization='minmax',\n",
-    "                               norm_precomputed_values = [train_dataset.xmax, train_dataset.xmin],\n",
-    "                               target='cross', info=1)\n",
-    "                               # norm_precomputed_values = [train_dataset.xmean, train_dataset.xstd]\n",
+    "                               target='cross', info=info)\n",
     "\n",
     "val_dataset.shuffle()"
    ]
@@ -253,18 +274,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "textsize = 14\n",
+    "body_parts = val_dataset.body_parts\n",
+    "pose_parts = val_dataset.pose_parts\n",
+    "parts = list(body_parts.keys())\n",
+    "\n",
+    "node_coords = {}\n",
+    "\n",
+    "plt.figure(figsize=(10,10))\n",
+    "\n",
     "skeleton = val_dataset.data[0].x_temporal[0][:, 0:2].tolist()\n",
     "\n",
-    "skeleton2 = []\n",
+    "for e, sk in enumerate(skeleton):    \n",
+    "    node_coords[parts[e]] = sk\n",
+    "    \n",
+    "    plt.scatter(sk[0], sk[1], label=parts[e])\n",
     "\n",
-    "for sk in skeleton:\n",
-    "    if(sk!=[0, 0]):\n",
-    "        skeleton2.append(sk)\n",
-    "        \n",
-    "skeleton2 = np.asarray(skeleton2)\n",
+    "for edge in pose_parts:\n",
+    "    e0 = node_coords[edge[0]]\n",
+    "    e1 = node_coords[edge[1]]\n",
+    "    \n",
+    "    plt.plot([e0[0], e1[0]], [e0[1], e1[1]], color='gray')\n",
     "\n",
-    "plt.figure()\n",
-    "plt.scatter(skeleton2[:, 0], skeleton2[:, 1])\n",
+    "plt.legend(loc='best', prop={'size': 11})\n",
+    "plt.xticks(size=textsize)\n",
+    "plt.yticks(size=textsize)\n",
+    "plt.title('Skeleton preview in 2D', size=textsize)\n",
     "plt.show()"
    ]
   },
@@ -299,11 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset.shuffle()\n",
-    "test_dataset = train_dataset[:5000]\n",
-    "train_dataset = train_dataset[5000:]\n",
-    "\n",
-    "len(train_dataset), len(val_dataset), len(test_dataset)"
+    "train_dataset.shuffle()"
    ]
   },
   {
@@ -337,7 +368,7 @@
    "outputs": [],
    "source": [
     "num_epochs = 25\n",
-    "batch_size = 50\n",
+    "batch_size = 500\n",
     "\n",
     "device = torch.device('cpu')\n",
     "model = SpatialTemporalGNN(embed_dim, numberOfClasses, numberOfNodes, net='GConvGRU', filterSize=3).to(device)\n",
@@ -449,6 +480,65 @@
    "metadata": {},
    "source": [
     "# Testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_dataset = SkeletonsDataset('Data/test_annotations_with_skeletons.csv', normalization='minmax',\n",
+    "                               target='cross', info=info)\n",
+    "\n",
+    "test_dataset.shuffle()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Number of elements per class:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "totalRows = len(test_dataset.loadedData)\n",
+    "crossingRows = len(test_dataset.loadedData[test_dataset.loadedData['cross']=='crossing'])\n",
+    "nocrossingRows = len(test_dataset.loadedData[test_dataset.loadedData['cross']=='not-crossing'])\n",
+    "\n",
+    "print('Test dataset total rows:', totalRows)\n",
+    "print('Test dataset crossing class samples:', crossingRows)\n",
+    "print('Test dataset not-crossing class samples:', nocrossingRows)\n",
+    "\n",
+    "plt.figure(figsize=(10,10))\n",
+    "plt.bar(1, crossingRows, label='Crossing class')\n",
+    "plt.bar(0, nocrossingRows, label='Not-crossing class')\n",
+    "plt.legend(loc='best', prop={'size': 15})\n",
+    "plt.xticks([0, 1], size=15)\n",
+    "plt.yticks(size=15)\n",
+    "plt.xlabel('Class', size=15)\n",
+    "plt.ylabel('Number of samples', size=15)\n",
+    "plt.title('Dataset classes distribution', size=15)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test results"
    ]
   },
   {
